# p_atomy

./: .gitignore  README.md  pyproject.toml
ai/: .env.example  core.py  main.py  memory.py
ai/db/: db_from_atomy.faiss
webservice/: atomy.ipynb  requirements.txt  test_chunks.ipynb
webservice/api/: ai.py  main.py
webservice/api/db/: db_from_atomy.pkl
webservice/telegram/: .env.example  core.py
